--- a/environment-jimebillie/css/login.css
+++ b/environment-jimebillie/css/login.css
@@ -53,7 +53,7 @@
     right: 0;
     bottom: 0;
 }
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .login-bg-fixed > .wrap-panel-login > .wrap-content-login {
         background-color: rgba(255, 255, 255, 0.7);
     }
